--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "mongoose": "^8.16.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@types/express": "^5.0.3",
+    "eslint": "^9.31.0",
+    "globals": "^16.3.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.36.0"
   }
 }
